--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            text-align: center;
         }
         h1 {
             color: #2c3e50;
-            text-align: center;
+            margin-bottom: 20px;
         }
         .console {
             background: #1e1e1e;
@@ -31,28 +32,45 @@
             overflow-y: auto;
             font-family: 'Courier New', monospace;
             margin-top: 20px;
+            text-align: left;
+            border: 2px solid #333;
         }
         button {
             background: #3498db;
             color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 15px 30px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px;
+            font-weight: bold;
+            margin: 10px;
         }
         button:hover {
             background: #2980b9;
         }
+        button:disabled {
+            background: #95a5a6;
+            cursor: not-allowed;
+        }
+        .status {
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .success { background: #d4edda; color: #155724; }
+        .error { background: #f8d7da; color: #721c24; }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>🏆 Sports Day Simulation 🏆</h1>
-        <p>Click the button below to start the Sports Day events!</p>
-        <button onclick="startSportsDay()">Start Sports Day</button>
+        <div id="status" class="status"></div>
+        <button id="startBtn" onclick="startSportsDay()">Start Sports Day</button>
+        <button onclick="clearConsole()">Clear Console</button>
+        
         <div class="console" id="consoleOutput">
-            <div>Console output will appear here...</div>
+            <div>▶️ Console ready. Click "Start Sports Day" to begin!</div>
         </div>
     </div>
 
