--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Day Simulation</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 50px auto;
+        body { 
+            font-family: Arial, sans-serif; 
+            max-width: 800px; 
+            margin: 50px auto; 
             padding: 20px;
             background-color: #f5f5f5;
         }
@@ -17,11 +15,11 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            text-align: center;
         }
         h1 {
             color: #2c3e50;
-            margin-bottom: 20px;
+            text-align: center;
+            margin-bottom: 30px;
         }
         .console {
             background: #1e1e1e;
@@ -31,8 +29,7 @@
             height: 400px;
             overflow-y: auto;
             font-family: 'Courier New', monospace;
-            margin-top: 20px;
-            text-align: left;
+            margin: 20px 0;
             border: 2px solid #333;
         }
         button {
@@ -42,9 +39,10 @@
             padding: 15px 30px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
-            margin: 10px;
+            display: block;
+            margin: 0 auto;
         }
         button:hover {
             background: #2980b9;
@@ -53,24 +51,18 @@
             background: #95a5a6;
             cursor: not-allowed;
         }
-        .status {
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
+        .event-message {
+            margin: 8px 0;
+            padding: 5px;
         }
-        .success { background: #d4edda; color: #155724; }
-        .error { background: #f8d7da; color: #721c24; }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>🏆 Sports Day Simulation 🏆</h1>
-        <div id="status" class="status"></div>
-        <button id="startBtn" onclick="startSportsDay()">Start Sports Day</button>
-        <button onclick="clearConsole()">Clear Console</button>
-        
-        <div class="console" id="consoleOutput">
-            <div>▶️ Console ready. Click "Start Sports Day" to begin!</div>
+        <button id="startBtn" onclick="startSportsDay()">START SPORTS DAY</button>
+        <div class="console" id="output">
+            <div class="event-message">Ready to start... Click the button above!</div>
         </div>
     </div>
 
